# pipelines-0.1.31

./: .gitignore  README.md  go.mod  go.sum
backend/src/apiserver/: client_manager.go  main.go
backend/src/apiserver/model/: BUILD.bazel  app_manage.go  deepexi_app.go  deepexi_dataset.go
backend/src/apiserver/resource/: client_manager_fake.go  resource_manager.go
backend/src/apiserver/server/: BUILD.bazel  app_manage_server.go  myapp_manage_server.go
backend/src/apiserver/storage/: BUILD.bazel  app_manage_store.go  myapp_manage_store.go
backend/src/apiserver/visualization/: requirements.txt  third_party_licenses.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/server/: package-lock.json  package.json
frontend/src/components/: Banner.tsx  CustomTable.tsx  NewRunParameters.tsx  SideNav.tsx  UploadPipelineDialog.tsx
frontend/src/lib/: Buttons.ts
frontend/src/pages/: Archive.tsx  ExperimentList.tsx  ExperimentsAndRuns.tsx  NewExperiment.tsx  NewRun.tsx  Page.tsx  PipelineList.tsx  RunDetails.tsx  RunList.tsx
