load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db_status.go",
        "default_experiment.go",
        "experiment.go",
        "job.go",
        "listable_model.go",
        "pipeline.go",
        "pipeline_spec.go",
        "resource_reference.go",
        "run.go",
        "deepexi_app.go",
        "deepexi_dataset.go",
        "app_manage.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/src/apiserver/model",
    visibility = ["//visibility:public"],
    deps = ["//backend/src/apiserver/common:go_default_library"],
)
